# xarray-behave

./: .gitignore  README.md  benchmark_access.ipynb  benchmark_hdf5.ipynb  build_env.yml  compare metrics.ipynb  condarc.yml  demo.ipynb  demo_behavioral_features.ipynb  plot_song_video.py  psv.py  pyproject.toml  requirements.txt  setup.py  test_id_flips.ipynb  test_include.ipynb  test_mask.ipynb  test_metrics.py  test_numba.py  test_spec.ipynb  turbo_colormap_mpl.py
.github/workflows/: publish.yaml  test_install.yaml
conda/: Dockerfile  README.md  build.bat
conda/xarray-behave/: bld.bat  build.sh  meta.yaml
conda/xarray-behave-nogui/: bld.bat  build.sh  meta.yaml
conda/xarray-behave-osxarm/: bld.bat  build.sh  meta.yaml
conda/xb/: bld.bat  build.sh  meta.yaml
conda/xb-nogui/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
doc/: demo.ipynb  demo_behavioral_features.ipynb  demo_behavioral_features_large_group.ipynb
env/: win.yml  xb.yml  xb_gui.yml  xb_gui_osxarm.yml
src/xarray_behave/: __init__.py  _ui_utils.py  annot.py  behavioral_features.py  event_utils.py  kinematics.py  loaders.py  metrics.py  simple_view.py  song.py  ui.py  xarray_behave.py
src/xarray_behave/gui/: app.py  audio_player.py  colormaps.py  das.py  deepss.py  dss.py  formbuilder.py  table.py  utils.py  view_dialog.py  views.py  widgets.py
src/xarray_behave/gui/forms/: das_make.yaml  das_predict.yaml  das_train.yaml  deepss_make.yaml  dss_predict.yaml  dss_train.yaml  envelope_computation.yaml  example.yaml  export_for_das.yaml  export_for_deepss.yaml  from_dir.yaml  from_file.yaml  from_hdf5.yaml  from_wav.yaml  from_zarr.yaml  predict.yaml  spec_freq.yaml  train.yaml  update_predictions.yaml
src/xarray_behave/io/: __init__.py  annotations.py  annotations_manual.py  audio.py  balltracks.py  movieparams.py  poses.py  timestamps.py  tracks.py
src/xarray_behave/io/samplestamps/: __init__.py  samplestamps.py  utils.py
tests/: test_annot.py  test_assemble.py  test_assemble_metrics.py  test_imports.py  test_io.py  test_sampstamps.py
