[build-system]
requires = ["flit_core >=3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
dist-name = "xarray-behave"
module = "xarray_behave"
author = "Jan Clemens"
author-email = "clemensjan@googlemail.com"
home-page = "https://github.com/janclemenslab/xarray-behave"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.6"
requires = ['numpy', 'scipy', 'xarray', 'h5py', 'zarr', 'flammkuchen',
            'dask', 'toolz', 'samplestamps', 'pysoundfile', 'opencv-python-headless']
description-file = "README.md"

[tool.flit.metadata.requires-extra]
gui = ['pyside2', 'pyqtgraph>0.12.2', 'pyvideoreader',
       'sounddevice', 'scikit-image', 'pyyaml', 'defopt', 'colorcet',
       'peakutils']

[tool.flit.scripts]
xb = "xarray_behave.gui.app:cli"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests",]
