[build-system]
requires = ["flit_core >=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "xarray-behave"
authors = [
       {name = "Jan Clemens", email = "clemensjan@googlemail.com"},
]
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">3.6"
dependencies = ['numpy', 'scipy', 'xarray', 'h5py', 'zarr', 'flammkuchen', 'rich',
                'dask', 'toolz', 'samplestamps', 'pysoundfile', 'opencv-python-headless']
readme = "README.md"

[project.optional-dependencies]
gui = ['pyside6', 'pyqtgraph>0.12.2', 'pyvideoreader', 'qtpy', 'superqt',
       'sounddevice', 'scikit-image', 'pyyaml', 'defopt', 'colorcet',
       'peakutils']

[project.scripts]
xb = "xarray_behave.gui.app:cli"

[project.urls]
source = "https://github.com/janclemenslab/xarray-behave"
documentation = "https://janclemenslab.org/das/"

[tool.flit.module]
name = "xarray_behave"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests",]
